--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-# Gym Management Platform - Requirements Specification
+# Gym Registration System 
 
 ## 1. Project Overview
 ### 1.1 Project Purpose
